--- a/practise/makefile
+++ b/practise/makefile
@@ -1,6 +1,6 @@
-test: test.cpp arctg
-	g++ -std=c++11 -I/home/lisyarus/projects/cpp-lib/ test.cpp -c -o test.o -m32
-	gcc test.o arctg.o -lstdc++ -o test -m32
+arctg-test: arctg-test.cpp arctg
+	g++ -std=c++11 arctg-test.cpp -c -o build/arctg-test.o -m32
+	gcc build/arctg-test.o build/arctg.o -lstdc++ -o build/arctg-test -m32
 
 arctg: arctg.asm
-	yasm arctg.asm -o arctg.o -f elf32
+	yasm arctg.asm -o build/arctg.o -f elf32
